--- a/tracker-web/src/pages/Home.css
+++ b/tracker-web/src/pages/Home.css
@@ -1,6 +1,13 @@
-.bg-semi-border {
-    border-top: 1px solid red;
-    border-left: 1px solid red;
-    border-bottom: 1px solid blue;
-    border-right: 1px solid blue;
+.title-bg::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: -5%;
+    width: 100%;
+    height: 40%;
+    background-color: rgba(0, 0, 0);
+    z-index: -1;
+}
+.title-bg {
+    position: relative;
 }
